--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   responsive_sizer: ^3.1.1
   google_fonts: ^3.0.1
+  dio: ^4.0.6
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
